<resources>
    <string name="appName" description="App name. Don't need to translate.">PrivaDroid - UofT</string>
    <string name="facebook_app_id" description="Facebook App ID.">905466186491599</string>
    <string name="congratulations" description="Congratulation message.">Congratulations!</string>
    <string name="finish_setting_up_accessibility_and_app_usage" description="Tell users to enable accessibility and app usage in set up screen.">Finish setting up accessibility and usage services to use the app.</string>
    <string name="failed_to_join_make_sure_network" description="Error message when user failed to join the experiment.">Failed to join. Make sure you are connected to the internet.</string>
    <string name="agree_to_terms" description="User needs to agree to the terms to proceed.">Agree to terms above</string>
    <string name="continue_app_settings_button" description="Continue button">Continue</string>
    <string name="submit" description="Submit button">Submit</string>
    <string name="terms_title" description="Terms title">Terms</string>
    <string name="skip_tutorial" description="skip button">Skip</string>
    <string name="join_app" description="start button">Start</string>
    <string name="set_up" description="set up button">Set up</string>
    <string name="ok" description="ok button">OK</string>
    <string name="done" description="done button">Done</string>
    <string name="tutorial_how_title" description="'How to use' tutorial card title">How to use?</string>
    <string name="tutorial_how_description" description="How to use the application description">
        App Install shows a list of apps that were installed after PrivaDroid was installed. Similarly,
        App Uninstall tab shows a list of apps that were uninstalled. Permission screen contains the grants/denys
        you gave to permission requests. You can submit demographic survey and view your Advertisement
        ID, join date and rewards status in the Profile tab.
    </string>
    <string name="tutorial_accessibility_service_title" description="Accessibility service card title">Accessibility Service</string>
    <string name="tutorial_accessibility_service_description" description="Why accessibility service is needed">
        Accessibility Service is required and used when the app needs to read the permission name and whether you grant/deny the
        permission request from an app. For example, Camera app requests Location access to you through a dialog and PrivaDroid will
        read the permission requested (Location) and whether you granted/denied it (Allow/Deny).
    </string>
    <string name="accessibility_rationale" description="Message shown to the user when toggling the accessibility permission for PrivaDroid">
        This permission is needed for PrivaDroid to be able to read permission name on the screen and detect click events when granting/denying permission requests.
    </string>
    <string name="tutorial_app_usage_title" description="App usage card title">App Usage Access</string>
    <string name="tutorial_app_usage_description" description="Why app access is needed">
        Usage access allows PrivaDroid to track what other apps you are using and how often, as well as your carrier, language settings,
        and other details.
    </string>
    <string name="community">Community</string>
    <string name="permission">Permission</string>
    <string name="app_uninstall">App Uninstall</string>
    <string name="app_install">App Install</string>
    <string name="profile">Profile</string>
    <string name="profile_screen_title">Profile</string>
    <string name="your_id">PrivaDroid ID</string>
    <string name="join_date">Join Date</string>
    <string name="last_heartbeat">Last Heartbeat Reminder</string>
    <string name="last_demographic">Last Demographic Reminder</string>
    <string name="app_install_screen_title">App Install</string>
    <string name="app_uninstall_screen_title">App Uninstall</string>
    <string name="community_screen_title">Community</string>
    <string name="permission_screen_title">Permission</string>
    <string name="surveyed">Surveyed</string>
    <string name="surveyed_events">Surveyed Events</string>
    <string name="unsurveyed">Unsurveyed</string>
    <string name="unsurveyed_events">Unsurveyed Events</string>
    <string name="summary">Summary</string>
    <string name="view_data">View Data</string>
    <string name="demographic_screen_title">Demographic Survey</string>
    <string name="rewards_screen_title">Rewards</string>
    <string name="rewards_method_question" description="Let user enter email or bitcoin account to receive reward">Enter your PayPal email address or Bitcoin wallet address that you want to receive the reward with below:</string>
    <string name="rewards_method_hint">PayPal email or Bitcoin wallet</string>
    <string name="rewards_method_confirm">Confirm your email or wallet</string>
    <string name="rewards_method_not_match_error">Email/Wallet values do not match.</string>
    <string name="rewards_complete_join_date_text">You join the experiment on %1$s.</string>
    <string name="rewards_join_date_invalid_contact_team">Invalid join date. Please contact our team.</string>
    <string name="rewards_days_left_text">%1$s days till rewards.</string>
    <string name="rewards_invalid_method">Invalid value</string>
    <string name="surveyed_events_activity_title">Surveyed Events</string>
    <string name="unsurveyed_events_activity_title">Unsurveyed Events</string>
    <plurals name="number_of_app_install_surveyed_events_card_description">
        <item quantity="one">You have %d surveyed app install event.</item>
        <item quantity="other">You have %d surveyed app install events.</item>
    </plurals>
    <plurals name="number_of_app_install_unsurveyed_events_card_description">
        <item quantity="one">You have %d unsurveyed app install event.</item>
        <item quantity="other">You have %d unsurveyed app install events.</item>
    </plurals>
    <plurals name="number_of_app_uninstall_surveyed_events_card_description">
        <item quantity="one">You have %d surveyed app uninstall event.</item>
        <item quantity="other">You have %d surveyed app uninstall events.</item>
    </plurals>
    <plurals name="number_of_app_uninstall_unsurveyed_events_card_description">
        <item quantity="one">You have %d unsurveyed app uninstall event.</item>
        <item quantity="other">You have %d unsurveyed app uninstall events.</item>
    </plurals>
    <plurals name="number_of_permission_unsurveyed_events_card_description">
        <item quantity="one">You have %d unsurveyed permission request event.</item>
        <item quantity="other">You have %d unsurveyed permission request events.</item>
    </plurals>
    <plurals name="number_of_permission_surveyed_events_card_description">
        <item quantity="one">You have %d surveyed permission request event.</item>
        <item quantity="other">You have %d surveyed permission request events.</item>
    </plurals>
    <string name="empty" />
    <string name="why_install_app_on_date_list_item_description" description="format text for app install question">Why did you install %1$s on %2$s?</string>
    <string name="why_uninstall_app_on_date_list_item_description" description="format text for app uninstall question">Why did you uninstall %1$s on %2$s?</string>
    <string name="why_install_app_description" description="format text for app install short question">Why did you install %1$s?</string>
    <string name="why_uninstall_app_description" description="format text for app uninstall short question">Why did you uninstall %1$s?</string>
    <string name="permission_app_name_list_item_title" description="Permission name of app name format text">%1$s permission requested by %2$s app</string>
    <string name="why_grant_permission_for_app_description" description="permission grant format question">Why did you grant %1$s permission to %2$s app on %3$s?</string>
    <string name="why_deny_permission_for_app_description" description="permission deny format question">Why did you deny %1$s permission to %2$s app on %3$s?</string>
    <string name="why_always_grant_permission_for_app_description">Why did you decide to always grant %1$s permission to %2$s app on %3$s?</string>
    <string name="why_only_foreground_permission_for_app_description">Why did you decide to only allow foreground %1$s permission to %2$s app on %3$s?</string>
    <string name="app_uninstall_question_why" description="app uninstall survey question why">1. Why did you uninstall the app?</string>
    <string name="app_uninstall_question_permission_remembered_requested" description="app uninstall survey question remember">2. Do you remember if the app requires any of the following permissions?</string>
    <string name="permission_grant_question_why" description="permission grant survey event why">1. Why did you grant the permission request?</string>
    <string name="permission_grant_question_temporary">4. Do you want to grant the permission temporarily?</string>
    <string name="permission_grant_question_reminder">5. Would you like a notification to remind you of disabling this permission later?</string>
    <string name="revoke_permission_reminder_regex">In (.) hour</string>
    <string name="permission_deny_question_why" description="permission deny survey event why">1. Why did you deny the permission request?</string>
    <string name="permission_question_expect_request" description="permission why requested question">2. Did you expect the app requests this permission?</string>
    <string name="permission_grant_question_comfortable" description="comfort level granting question">3. How comfortable do you feel granting this permission request?</string>
    <string name="permission_deny_question_comfortable" description="comfort level denying question">3. How comfortable do you feel denying this permission request?</string>
    <string name="terms_description" description="Terms that user needs to agree with in order to join">
        This experiment is entirely voluntary and you can join/exit the experiment at any given time. Participants must be over 18 years old. The purpose of this experiment is to study the reasons for the decisions users make when answering runtime permission requests and when installing and uninstalling applications. Survey questions will appear at some app install and uninstall events, and sometimes at the moment of a permission request. We collect demographic information once at the beginning and ask for your opinion on a few items in an exit survey. The app collects no personally identifiable data except for your Google Advertising ID and we will not use this ID to re-identify you. Your data and answers are only shared with our research team and access control is used to secure your data.\n\n
        Participants need to enable accessibility service and app usage access for PrivaDroid to work properly. Participants who answer the demographic questionnaire and stay in the experiment for 30 days will qualify for a 10 USD reward in the form of PayPal payment or Bitcoin payment. We ONLY support these two payment methods. Multiple enrollments in this experiment only qualify for one payment. Payments may take about three weeks and longer. Currently, we only accept participants from Canada, United States, United Kingdom, South Korea, Spain, France, Hong Kong, India, South Africa, Argentina and Singapore. Users outside of the above countries can still participate but will not be eligible to receive a reward. During the experiment, your Android language MUST be set to one of the following languages: English, Spanish, French, Korean and Traditional Chinese. You won\'t be eligible for the reward otherwise. Thanks for joining!
    </string>
</resources>