<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/rewards_head_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/rewards_back_button"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

        <TextView
            android:id="@+id/rewards_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingTop="@dimen/divider_margin"
            android:paddingEnd="20dp"
            android:paddingBottom="@dimen/divider_margin"
            android:text="@string/rewards_screen_title"
            android:textColor="@color/black"
            android:textSize="@dimen/screen_title_size"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp"
        app:layout_constraintTop_toBottomOf="@+id/rewards_head_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/rewards_days_left_card"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_card_spacing"
                android:layout_marginTop="@dimen/material_card_spacing"
                android:layout_marginRight="@dimen/material_card_spacing"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rewards_days_left_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="27dp"
                        android:textAlignment="center"
                        android:text="@string/empty"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingBottom="20dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="20dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/rewards_method_card"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/material_card_spacing"
                android:layout_marginTop="@dimen/material_card_spacing"
                android:layout_marginRight="@dimen/material_card_spacing"
                card_view:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rewards_complete_join_date_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="27dp"
                        android:text="@string/empty"
                        android:paddingTop="15dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingEnd="20dp" />

                    <TextView
                        android:id="@+id/rewards_method_question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="27dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="20dp"
                        android:text="@string/rewards_method_question"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rewards_method_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="27dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="15dp"
                        android:hint="@string/rewards_method_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rewards_method_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rewards_method_confirm_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="27dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="20dp"
                        android:hint="@string/rewards_method_confirm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rewards_method_confirm_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/rewards_answered_on"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/empty" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rewards_submit_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>